# lyapwatch

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quickstart.py
src/lyapwatch/: __init__.py  cli.py  lyapunov.py  metrics.py  monitor.py  regime.py
tests/: test_cli.py  test_lyapunov.py  test_metrics.py  test_monitor.py
