[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lyapwatch"
version = "0.1.0"
description = "Lyapunov stability monitoring for retraining loops — warn on divergence before the loop loses stability."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Nguyen Thu Thuy", email = "sophie.nguyenthuthuy@gmail.com" }]
keywords = ["mlops", "lyapunov", "stability", "retraining", "monitoring", "dynamical-systems"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
lyapwatch = "lyapwatch.cli:main"

[project.urls]
Homepage = "https://github.com/sophie-nguyenthuthuy/lyapwatch"
Issues = "https://github.com/sophie-nguyenthuthuy/lyapwatch/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lyapwatch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
